--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,14 @@
-# Veritabanı bağlantı ayarları
-spring.datasource.url=jdbc:postgresql://${DBURL:dpg-crpfdr52ng1s7395fvbg-a.oregon-postgres.render.com/librarydb_wu6j}:${DBPORT:5432}/${DBNAME:librarydb_wu6j}
-spring.datasource.username=${DBUSERNAME:librarydb_wu6j}
+# Database connection settings
+spring.datasource.url=jdbc:postgresql://${DBURL:pg-crpfdr52ng1s7395fvbg-a.oregon-postgres.render.com/librarydb_wu6j}:${DBPORT:5432}/${DBNAME:librarydb_wu6j}
+spring.datasource.username=${DBUSERNAME:librarydb_wu6j_user}
 spring.datasource.password=${DBPASSWORD:8mycHRdwzj5z6XdzB2wSOfb1UfVN2mme}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-# Hibernate ayarları
+# Hibernate settings
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.show-sql=true
 
-# Log seviyeleri
-logging.level.org.hibernate.SQL=DEBUG
+# Log levels
+logging.level.org.hibernate.SQL=INFO  # Adjust this in production
