--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,4 +11,4 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 # Log levels
-logging.level.org.hibernate.SQL=INFO  # Adjust this in production
+logging.level.org.hibernate.SQL=INFO  
