--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-# Database connection settings
-spring.datasource.url=jdbc:postgresql://${DBURL:pg-crpfdr52ng1s7395fvbg-a.oregon-postgres.render.com/librarydb_wu6j}:${DBPORT:5432}/${DBNAME:librarydb_wu6j}
+# Veritabanı bağlantı ayarları
+spring.datasource.url=jdbc:postgresql://${DBURL:pg-crpfdr52ng1s7395fvbg-a.oregon-postgres.render.com}:${DBPORT:5432}/${DBNAME:librarydb_wu6j}
 spring.datasource.username=${DBUSERNAME:librarydb_wu6j_user}
-spring.datasource.password=${DBPASSWORD:8mycHRdwzj5z6XdzB2wSOfb1UfVN2mme}
+spring.datasource.password=${DBPASSWORD:8mycHRdwzj5z6XdzB2wSOfb1UfVN2mme} 
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # Hibernate settings
