--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # Veritabanı bağlantı ayarları
-spring.datasource.url=jdbc:postgresql://${DBURL:pg-crpfdr52ng1s7395fvbg-a.oregon-postgres.render.com}:${DBPORT:5432}/${DBNAME:librarydb_wu6j}
+spring.datasource.url=jdbc:postgresql://${DBURL:dpg-crpfdr52ng1s7395fvbg-a.oregon-postgres.render.com/librarydb_wu6}:${DBPORT:5432}/${DBNAME:librarydb_wu6j}
 spring.datasource.username=${DBUSERNAME:librarydb_wu6j_user}
 spring.datasource.password=${DBPASSWORD:8mycHRdwzj5z6XdzB2wSOfb1UfVN2mme} 
 spring.datasource.driver-class-name=org.postgresql.Driver
