--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # Veritabanı bağlantı ayarları
-spring.datasource.url=jdbc:postgresql://${DBURL:dpg-crpfdr52ng1s7395fvbg-a.oregon-postgres.render.com}:${DBPORT:5432}/${DBNAME:librarydb_wu6j}
-spring.datasource.username=${DBUSERNAME:librarydb_wu6j_user}
-spring.datasource.password=${DBPASSWORD:8mycHRdwzj5z6XdzB2wSOfb1UfVN2mme} 
+spring.datasource.url=jdbc:postgresql://${DBURL:dpg-crpfdr52ng1s7395fvbg-a.oregon-postgres.render.com}:${DBPORT:5432}/${DBNAME:librarydb_8cbg}
+spring.datasource.username=${DBUSERNAME:kerem}
+spring.datasource.password=${DBPASSWORD:AQ63DKc8ZUkuevv5JNxvJNqjlsRiUE2A} 
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # Hibernate settings
