--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # Veritabanı bağlantı ayarları
-spring.datasource.url=jdbc:postgresql://${DBURL:dpg-crpk6a5ds78s73db9hf0-a.oregon-postgres.render.com/librarydb_8cbg}:${DBPORT:5432}/${DBNAME:librarydb_8cbg}
+spring.datasource.url=jdbc:postgresql://${DBURL:dpg-crpk6a5ds78s73db9hf0-a.oregon-postgres.render.com}:${DBPORT:5432}/${DBNAME:librarydb_8cbg}
 spring.datasource.username=${DBUSERNAME:kerem}
 spring.datasource.password=${DBPASSWORD:AQ63DKc8ZUkuevv5JNxvJNqjlsRiUE2A} 
 spring.datasource.driver-class-name=org.postgresql.Driver
