--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,14 @@
 # Veritabanı bağlantı ayarları
+spring.datasource.url=jdbc:postgresql://${DBURL:dpg-crpk6a5ds78s73db9hf0-a.oregon-postgres.render.com}:${DBPORT:5432}/${DBNAME:librarydb_8cbg}
+spring.datasource.username=${DBUSERNAME:kerem}
+spring.datasource.password=${DBPASSWORD:AQ63DKc8ZUkuevv5JNxvJNqjlsRiUE2A} 
+spring.datasource.driver-class-name=org.postgresql.Driver
 
-spring.datasource.url=jdbc:sqlserver://dpg-crpk6a5ds78s73db9hf0-a.oregon-postgres.render.com;databaseName=librarydb_8cbg
-spring.datasource.username=kerem
-spring.datasource.password=AQ63DKc8ZUkuevv5JNxvJNqjlsRiUE2A
+# Hibernate settings
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql = true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
-# Hibernate ddl auto (create, create-drop, validate, update)
-spring.jpa.hibernate.ddl-auto = update
+# Log levels
+logging.level.org.hibernate.SQL=INFO  
