--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # Veritabanı bağlantı ayarları
-spring.datasource.url=jdbc:postgresql://${DBURL:dpg-crpk6a5ds78s73db9hf0-a.oregon-postgres.render.com}:${DBPORT:5432}/${DBNAME:librarydb_8cbg}
-spring.datasource.username=${DBUSERNAME:kerem}
-spring.datasource.password=${DBPASSWORD:AQ63DKc8ZUkuevv5JNxvJNqjlsRiUE2A} 
+spring.datasource.url=jdbc:postgresql://${DBURL:dpg-crpsg73v2p9s738bb1ng-a.oregon-postgres.render.com}:${DBPORT:5432}/${DBNAME:library_29hi}
+spring.datasource.username=${DBUSERNAME:library_29hi_user}
+spring.datasource.password=${DBPASSWORD:871OeGbme0szFEO6Ahyqh9ufOVV3hzyB} 
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # Hibernate settings
