--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,15 @@
 # Veritabanı bağlantı ayarları
 spring.datasource.url=jdbc:postgresql://${DBURL:dpg-crpsg73v2p9s738bb1ng-a.oregon-postgres.render.com/library_29hi}:${DBPORT:5432}/${DBNAME:library_29hi}
 spring.datasource.username=${DBUSERNAME:library_29hi_user}
-spring.datasource.password=${DBPASSWORD:871OeGbme0szFEO6Ahyqh9ufOVV3hzyB} 
+spring.datasource.password=${DBPASSWORD:871OeGbme0szFEO6Ahyqh9ufOVV3hzyB}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-# Hibernate settings
+# Hibernate ayarları
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.show-sql=true
 
-# Log levels
-logging.level.org.hibernate.SQL=INFO  
+# Log seviyeleri
+logging.level.org.hibernate.SQL=DEBUG
