--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # Veritabanı bağlantı ayarları
-spring.datasource.url=jdbc:postgresql://${DBURL:dpg-crpsg73v2p9s738bb1ng-a.oregon-postgres.render.com/library_29hi}:${DBPORT:5432}/${DBNAME:library_29hi}
+spring.datasource.url=jdbc:postgresql://${DBURL:dpg-crpfdr52ng1s7395fvbg-a.oregon-postgres.render.com}:${DBPORT:5432}/${DBNAME:library_29hi}
 spring.datasource.username=${DBUSERNAME:library_29hi_user}
 spring.datasource.password=${DBPASSWORD:871OeGbme0szFEO6Ahyqh9ufOVV3hzyB}
 spring.datasource.driver-class-name=org.postgresql.Driver
