--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,12 @@
-# Veritabanı bağlantı ayarları
-spring.datasource.url=jdbc:postgresql://dpg-crpfdr52ng1s7395fvbg-a.oregon-postgres.render.com:5432/library_29hi
-spring.datasource.username=library_29hi_user
-spring.datasource.password=871OeGbme0szFEO6Ahyqh9ufOVV3hzyB
+spring.datasource.url=jdbc:postgresql://${DBURL:dpg-crpfdr52ng1s7395fvbg-a.oregon-postgres.render.com:5432/library_29hi}:${DBPORT:5432}/${DBNAME:library_29hi}
+spring.datasource.username=${DBUSERNAME:library_29hi_user}
+spring.datasource.password=${DBPASSWORD:871OeGbme0szFEO6Ahyqh9ufOVV3hzyB}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-# Hibernate ayarları
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.show-sql=true
 
-# Log seviyeleri
 logging.level.org.hibernate.SQL=DEBUG
-logging.level.org.hibernate=DEBUG
