--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://${DBURL:dpg-crpfdr52ng1s7395fvbg-a.oregon-postgres.render.com:5432/library_29hi}:${DBPORT:5432}/${DBNAME:library_29hi}
+spring.datasource.url=jdbc:postgresql://${DBURL:dpg-crpfdr52ng1s7395fvbg-a.oregon-postgres.render.com}:${DBPORT:5432}/${DBNAME:library_29hi}
 spring.datasource.username=${DBUSERNAME:library_29hi_user}
 spring.datasource.password=${DBPASSWORD:871OeGbme0szFEO6Ahyqh9ufOVV3hzyB}
 spring.datasource.driver-class-name=org.postgresql.Driver
