--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,15 @@
-spring.datasource.url=jdbc:postgresql://${DBURL:dpg-crpfdr52ng1s7395fvbg-a.oregon-postgres.render.com}:${DBPORT:5432}/${DBNAME:library_29hi}
-spring.datasource.username=${DBUSERNAME:library_29hi_user}
-spring.datasource.password=${DBPASSWORD:871OeGbme0szFEO6Ahyqh9ufOVV3hzyB}
+# Veritabanı bağlantı ayarları
+spring.datasource.url=jdbc:postgresql://${DBURL:dpg-crpto03tq21c73d7uudg-a.oregon-postgres.render.com/library_management_866q}:${DBPORT:5432}/${DBNAME:library_management_866q}
+spring.datasource.username=${DBUSERNAME:library_management_866q_user}
+spring.datasource.password=${DBPASSWORD:izajvONJgDWarwar0PVoEGTiR1IfTywh}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
+# Hibernate ayarları
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.show-sql=true
 
+# Log seviyeleri
 logging.level.org.hibernate.SQL=DEBUG
