--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # Veritabanı bağlantı ayarları
-spring.datasource.url=jdbc:postgresql://${DBURL:dpg-crpto03tq21c73d7uudg-a.oregon-postgres.render.com/library_management_866q}:${DBPORT:5432}/${DBNAME:library_management_866q}
+spring.datasource.url=jdbc:postgresql://${DBURL:dpg-crpto03tq21c73d7uudg-a.oregon-postgres.render.com}:${DBPORT:5432}/${DBNAME:library_management_866q}
 spring.datasource.username=${DBUSERNAME:library_management_866q_user}
 spring.datasource.password=${DBPASSWORD:izajvONJgDWarwar0PVoEGTiR1IfTywh}
 spring.datasource.driver-class-name=org.postgresql.Driver
